# foxker

./: .gitignore  README.md  docker.bat  docker.ps1  install.bat  install.ps1  pyproject.toml
foxker/: __init__.py  __main__.py  cli.py  config.py  default_config.json  gui.py  path_converter.py  proxy.py  py.typed
foxker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
